force-app/main/default/objects/ssot__RebateClaim__dlm/fields/ssot__CalculatedAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__CalculatedAmount__c</fullName>
    <label>Calculated Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CalculatedAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>