force-app/main/default/objects/ssot__RebateClaim__dlm/fields/ssot__ClaimAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimAmount__c</fullName>
    <label>Claim Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>