force-app/main/default/objects/ssot__RebateClaim__dlm/fields/ssot__ClaimDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimDateTime__c</fullName>
    <label>Claim Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>