force-app/main/default/objects/ssot__RebateClaim__dlm/fields/ssot__QuantityUnitofMeasureId__c.field-meta.xml
<CustomField>
    <fullName>ssot__QuantityUnitofMeasureId__c</fullName>
    <label>Quantity Unit of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>QuantityUnitofMeasureId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>