force-app/main/default/objects/ssot__RebateClaim__dlm/fields/ssot__SaleUnitPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__SaleUnitPriceAmount__c</fullName>
    <label>Sale Unit Price</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SaleUnitPriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>