force-app/main/default/objects/ssot__RebateClaim__dlm/fields/ssot__ShipDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShipDateTime__c</fullName>
    <label>Ship Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShipDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>