force-app/main/default/objects/ssot__RebateClaim__dlm/fields/ssot__TotalAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalAdjustmentAmount__c</fullName>
    <label>Total Adjustment Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalAdjustmentAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>